--- a/eco-solicitud-infrastructure/src/main/resources/application.properties
+++ b/eco-solicitud-infrastructure/src/main/resources/application.properties
@@ -23,3 +23,9 @@ spring.devtools.restart.quiet-period=400ms
 # CLI Configuration
 # Cambiar a true para habilitar el menú CLI al iniciar la aplicación
 app.cli.enabled=false
+
+# OAuth2 Google Configuration
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID:}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET:}
+spring.security.oauth2.client.registration.google.scope=profile,email
+spring.security.oauth2.client.provider.google.user-name-attribute=name
